# desktop

./: .gitignore  .prettierrc  README.md  package-lock.json  package.json  pnpm-lock.yaml
.github/workflows/: build-and-deploy.yml  build_release_on_main.yaml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  main.rs  system_tray.rs
src-tauri/src/actions/: registeryAction.wxs
src-tauri/src/app/: data.rs  db.rs
src-tauri/src/commands/: app_usage.rs  mod.rs  window_info.rs
src-tauri/src/registery/: registeryAction.wxs  winRegistery.reg
src-tauri/src/state/: app_usage_data.rs  mod.rs
src-tauri/src/ui/: tray.rs
src-tauri/src/ws/: server.rs
src/lib/: types.ts
src/lib/components/: AppTable.svelte  AppUsageTracker.svelte  ControlPanel.svelte  Graph.svelte
src/routes/: +page.svelte  BarChart.svelte  Modal.svelte  Switch.svelte  ToggleList.svelte  styles.css  tracker.svelte
