[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.60"

[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5.4", features = ["system-tray"] } # Added "system-tray" feature
active-win-pos-rs = "0.8"
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.26", features = ["bundled"] }
warp = "0.3"
futures-util = "0.3.30"

[features]
custom-protocol = [ "tauri/custom-protocol" ]
